Add Detail Film and Search Keyword

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
         ]]>
     </string>
     <string name="label_refresh">refresh</string>
+    <string name="label_plot">Plot</string>
+    <string name="label_production">Production</string>
+    <string name="hint_search_film">Cari Film</string>
 </resources>
